@@ -10,6 +10,8 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
     information.  It also supports the ~<f11> C- C-t~ key sequence to switch
     to Tree-Sitter aware mode or to classic mode.
   - Add the *pel-use-js2-closure* to support the js2-closure external package.
+  - Add the *pel-use-flow-js2-mode* to support the flow-js2-mode external package
+    that supports Flow a static type checking extension for Javascript.
 - Changed *pel-set-tab-width* binding from ~<f11> M-t~ to ~<f11> <tab> w~.
   The new binding is also easy to use and is associated with the other tab
   related commands by its prefix, serving as a reminder that other commands exist.
